<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:background="@drawable/bg_login_white">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_logo_asena"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/font_bold"
            android:textSize="27sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_login"
            android:layout_gravity="center"
            android:fontFamily="@font/font_light"
            android:maxLines="1"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            android:textColor="#A6A6A6"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:hint="@string/username_hint_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="25dp"
            android:layoutDirection="rtl"
            android:hint="@string/password_hint_login"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.kusu.loadingbutton.LoadingButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/enter_to_account"
            android:backgroundTint="@color/blueLight"
            android:textColor="@color/white"/>
    </LinearLayout>


</ScrollView>